--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -22486,5 +22486,15 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Whilst trying to flee, a zombie managed to your: {injury}! We've got to get out of this place, and quick!</target>
       </segment>
     </unit>
+    <unit id="5M1q6BC">
+      <notes>
+        <note category="german">Du erhälst einen Bauplan wenn Du in diesem Gebäude campst, aber du musst zunächst die Zone aufräumen.</note>
+        <note category="from">php:///src/Controller/BeyondController.php</note>
+      </notes>
+      <segment>
+        <source>Du erhälst einen Bauplan wenn Du in diesem Gebäude campst, aber du musst zunächst die Zone aufräumen.</source>
+        <target>You can obtain a blueprint if you camp here, but the zone must be cleared first of all.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
