--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22549,5 +22549,35 @@
         <target>Du erhälst einen Bauplan wenn Du in diesem Gebäude campst, aber du musst zunächst die Zone aufräumen.</target>
       </segment>
     </unit>
+    <unit id="O_a3lwS" name="(seit {num} Stunden herrscht völlige Flaute)">
+      <notes>
+        <note category="german">(seit {num} Stunden herrscht völlige Flaute)</note>
+        <note category="from">twig:///templates/ajax/admin/towns/log_content.html.twig;twig:///templates/ajax/game/log_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>(seit {num} Stunden herrscht völlige Flaute)</source>
+        <target>(más de {num} horas de calma absoluta)</target>
+      </segment>
+    </unit>
+    <unit id="GCKCg7_" name="(über eine Stunde ohne besondere Vorkommnisse)">
+      <notes>
+        <note category="german">(über eine Stunde ohne besondere Vorkommnisse)</note>
+        <note category="from">twig:///templates/ajax/admin/towns/log_content.html.twig;twig:///templates/ajax/game/log_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>(über eine Stunde ohne besondere Vorkommnisse)</source>
+        <target>(más de una hora sin actividad destacada)</target>
+      </segment>
+    </unit>
+    <unit id="gJumdci" name="({num} Minuten Stille)">
+      <notes>
+        <note category="german">({num} Minuten Stille)</note>
+        <note category="from">twig:///templates/ajax/admin/towns/log_content.html.twig;twig:///templates/ajax/game/log_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>({num} Minuten Stille)</source>
+        <target>({num} minutos de silencio)</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
