FR Translation for beta season

--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -3851,7 +3851,7 @@
       </notes>
       <segment>
         <source>Beta-Saison</source>
-        <target>Beta-Saison</target>
+        <target>Saison Beta</target>
       </segment>
     </unit>
     <unit id="ykRbs.i" name="&lt;span class=&quot;number&quot;&gt;Beta&lt;/span&gt; Saison">
@@ -3862,7 +3862,7 @@
       </notes>
       <segment>
         <source>&lt;span class="number"&gt;Beta&lt;/span&gt; Saison</source>
-        <target><![CDATA[<span class="number">Beta</span> Saison]]></target>
+        <target><![CDATA[Saison <span class="number">Beta</span>]]></target>
       </segment>
     </unit>
   </file>
